docs: regenerate reference manual for v0.7.0

--- a/docs/0.reference-manual.md
+++ b/docs/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.6.1`.
+Generated from LuaRadio `v0.7.0`.
 
 ## Table of contents
 
@@ -12,12 +12,14 @@ Generated from LuaRadio `v0.6.1`.
     * [Composition](#composition)
         * [CompositeBlock](#compositeblock)
     * [Sources](#sources)
+        * [AirspyHFSource](#airspyhfsource)
         * [AirspySource](#airspysource)
         * [HackRFSource](#hackrfsource)
         * [IQFileSource](#iqfilesource)
         * [JSONSource](#jsonsource)
         * [NetworkClientSource](#networkclientsource)
         * [NetworkServerSource](#networkserversource)
+        * [PortAudioSource](#portaudiosource)
         * [PulseAudioSource](#pulseaudiosource)
         * [RawFileSource](#rawfilesource)
         * [RealFileSource](#realfilesource)
@@ -324,6 +326,8 @@ end
 * Output port of block not found error.
 * Input port of block not found error.
 * Input port of block already connected error.
+* Unexpected number of output ports in block error.
+* Unexpected number of input ports in block error.
 
 ##### `CompositeBlock:run()`
 
@@ -417,6 +421,45 @@ top:wait()
 
 
 ### Sources
+
+#### AirspyHFSource
+
+Source a complex-valued signal from an Airspy HF+. This source requires the
+libairspyhf library.
+
+##### `radio.AirspyHFSource(frequency, rate[, options={}])`
+
+###### Arguments
+
+* `frequency` (*number*): Tuning frequency in Hz
+* `rate` (*number*): Sample rate in Hz (192 kHz, 256 kHz, 384 kHz, 768 kHz)
+* `options` (*table*): Additional options, specifying:
+    * `hf_agc` (bool, default true)
+    * `hf_agc_threshold` (string, default "low", choice of "low" or "high")
+    * `hf_att` (int, default 0 dB, for manual attenuation when HF AGC is
+      disabled, range of 0 to 48 dB, 6 dB step)
+    * `hf_lna` (bool, default false)
+
+###### Type Signatures
+
+* ❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Source samples from 91.1 MHz sampled at 768 kHz
+local src = radio.AirspyHFSource(91.1e6, 768e3)
+
+-- Source samples from 7.150 MHz sampled at 192 kHz, with HF AGC
+-- enabled (default) and HF LNA enabled
+local src = radio.AirspyHFSource(7.150e6, 192e3, {hf_lna = true})
+
+-- Source samples from 14.175 MHz sampled at 192 kHz, with HF AGC disabled
+-- and 24 dB HF attenuation
+local src = radio.AirspyHFSource(14.175e6, 192e3, {hf_agc = false, hf_att = 24})
+```
+
+--------------------------------------------------------------------------------
 
 #### AirspySource
 
@@ -692,6 +735,40 @@ local src = radio.NetworkServerSource(radio.RDSDecoderBlock.RDSPacketType, 0, 'j
 
 --------------------------------------------------------------------------------
 
+#### PortAudioSource
+
+Source one or more real-valued signals from the system's audio device with
+PortAudio. This source requires PortAudio.
+
+##### `radio.PortAudioSource(num_channels, rate)`
+
+###### Arguments
+
+* `num_channels` (*int*): Number of channels (e.g. 1 for mono, 2 for stereo)
+* `rate` (*int*): Sample rate in Hz
+
+###### Type Signatures
+
+* ❑➔ `out` *Float32*
+* ❑➔ `out1` *Float32*, `out2` *Float32*, `...`
+
+###### Example
+
+``` lua
+-- Source one channel (mono) audio sampled at 44100 Hz
+local src = radio.PortAudioSource(1, 44100)
+
+-- Source two channel (stereo) audio sampled at 48000 Hz
+local src = radio.PortAudioSource(2, 48000)
+-- Compose the two channels into a complex-valued signal
+local floattocomplex = radio.FloatToComplex()
+top:connect(src, 'out1', floattocomplex, 'real')
+top:connect(src, 'out2', floattocomplex, 'imag')
+top:connect(floattocomplex, ...)
+```
+
+--------------------------------------------------------------------------------
+
 #### PulseAudioSource
 
 Source one or more real-valued signals from the system's audio device with
@@ -809,6 +886,7 @@ the librtlsdr library.
 * `rate` (*number*): Sample rate in Hz
 * `options` (*table*): Additional options, specifying:
     * `biastee` (bool, default false)
+    * `direct_sampling` (string, default "disabled", choice of "disabled", "i", "q")
     * `bandwidth` (number, default equal to sample rate)
     * `autogain` (bool, default false)
     * `rf_gain` (number, default closest supported to 10.0 dB)
@@ -3895,7 +3973,7 @@ LuaRadio package.
 ComplexFloat32 data type, a C structure defined as:
 
 ``` c
-typedef struct {
+typedef struct complex_float32 {
     float real;
     float imag;
 } complex_float32_t;
@@ -4117,6 +4195,20 @@ local x = radio.types.ComplexFloat32()
 print(x)) --> ComplexFloat32<real=0, imag=0>
 ```
 
+##### `ComplexFloat32.type_name`
+
+Type name of ComplexFloat32.
+
+###### Returns
+
+* Type name (*string*)
+
+###### Example
+
+``` lua
+print(radio.types.ComplexFloat32.type_name) --> ComplexFloat32
+```
+
 --------------------------------------------------------------------------------
 
 #### Float32
@@ -4126,7 +4218,7 @@ print(x)) --> ComplexFloat32<real=0, imag=0>
 Float32 data type, a C structure defined as:
 
 ``` c
-typedef struct {
+typedef struct float32 {
     float value;
 } float32_t;
 ```
@@ -4284,6 +4376,20 @@ local x = radio.types.Float32()
 print(x)) --> Float32<value=0>
 ```
 
+##### `Float32.type_name`
+
+Type name of Float32.
+
+###### Returns
+
+* Type name (*string*)
+
+###### Example
+
+``` lua
+print(radio.types.Float32.type_name) --> Float32
+```
+
 --------------------------------------------------------------------------------
 
 #### Bit
@@ -4293,7 +4399,7 @@ print(x)) --> Float32<value=0>
 Bit data type, a C structure defined as:
 
 ``` c
-typedef struct {
+typedef struct bit {
     uint8_t value;
 } bit_t;
 ```
@@ -4409,6 +4515,20 @@ local x = radio.types.Bit()
 print(x)) --> Bit<value=0>
 ```
 
+##### `Bit.type_name`
+
+Type name of Bit.
+
+###### Returns
+
+* Type name (*string*)
+
+###### Example
+
+``` lua
+print(radio.types.Bit.type_name) --> Bit
+```
+
 ##### `Bit.tonumber(vec[, offset=0, length=0, order="msb"])`
 
 Convert a Bit vector to a number.
@@ -4443,7 +4563,7 @@ assert(radio.types.Bit.tonumber(vec, 2, 2, 'lsb') == 2)
 Byte data type, a C structure defined as:
 
 ``` c
-typedef struct {
+typedef struct byte {
     uint8_t value;
 } byte_t;
 ```
@@ -4587,6 +4707,20 @@ local x = radio.types.Byte()
 print(x)) --> Byte<value=0>
 ```
 
+##### `Byte.type_name`
+
+Type name of Byte.
+
+###### Returns
+
+* Type name (*string*)
+
+###### Example
+
+``` lua
+print(radio.types.Byte.type_name) --> Byte
+```
+
 --------------------------------------------------------------------------------
 
 
@@ -4655,6 +4789,14 @@ Compare two instances of this type.
 ###### Returns
 
 * Result (*bool*)
+
+##### `CStructType.type_name`
+
+Type name of this CStructType.
+
+###### Returns
+
+* Type name (*string*)
 
 --------------------------------------------------------------------------------
 
@@ -4742,6 +4884,14 @@ Deserialize an instance of this type with JSON.
 ###### Returns
 
 * Deserialized object (*ObjectType*)
+
+##### `ObjectType.type_name`
+
+Type name of this ObjectType.
+
+###### Returns
+
+* Type name (*string*)
 
 --------------------------------------------------------------------------------
 
