docs/architecture: update with refactoring of CompositeBlock

--- a/docs/5.architecture.md
+++ b/docs/5.architecture.md
@@ -332,14 +332,7 @@ The act of connecting two blocks in a flow graph is registering the block's
 hash table owned by a `CompositeBlock`, thereby building a graph of input and
 output connections.
 
-When a connection is made, a `Pipe` object is also created and registered under
-both `InputPort` and `OutputPort` containers of the connected blocks. This
-`Pipe` object provides an interface for the serialization and deserialization
-of sample vectors between blocks. The `Pipe` is how a block reads or writes
-vectors of samples from or to another block.
-
-Code reference: [Block class](../radio/core/block.lua), [InputPort, OutputPort,
-Pipe classes](../radio/core/pipe.lua).
+Code reference: [Block class](../radio/core/block.lua), [InputPort, OutputPort classes](../radio/core/block.lua), [CompositeBlock class](../radio/core/composite.lua).
 
 #### Differentiation
 
@@ -530,16 +523,10 @@ graph.
 ##### Connection
 
 When a connection is made with `connect()` on a top-level `CompositeBlock`, the
-`InputPort` and `OutputPort` ports are looked up in the blocks and added to the
-connections table, and a `Pipe` object is created and registered under both
-`InputPort` and `OutputPort` port instances.
-
-If a hierarchical block is connected into a top-level block, then its
-`AliasedInputPort` and `AliasedOutputPort` ports are followed to the underlying
-real `InputPort` and `OutputPort` ports, and those are the input and output
-port instances registered in the flow graph. This means that the hierarchical
-block does not exist in a top-level flow graph; it's just a convenience for
-composing blocks.
+`InputPort` and `OutputPort` ports are looked up by name in the blocks and
+added to the connections table as a key-value pair of input port to output
+port. A hierarchical block is connected in the same way, except its ports are
+of `AliasedInputPort` and `AliasedOutputPort` types.
 
 Code reference: [CompositeBlock class](../radio/core/composite.lua).
 
@@ -548,37 +535,58 @@ Code reference: [CompositeBlock class](../radio/core/composite.lua).
 After the flow graph is connected under a top-level block, it can be run with
 [`start()`](0.reference-manual.md#compositeblockstart) or
 [`run()`](0.reference-manual.md#compositeblockrun).  Running a flow graph
-requires a few initialization steps before each block can begin to consume,
-process, and produce samples.
+requires a few validation and initialization steps before each block can begin
+to consume, process, and produce samples.
 
-First, the `CompositeBlock` crawls its connections table and absorbs the
-internal connections table of any hierarchical blocks. Since hierarchical
-blocks were just connected at the boundary ports, the internal connections are
-not yet available to the top-level block and need to be absorbed.
+First, each block referenced in the connections table is checked for
+unconnected inputs. Hierarchical blocks are checked recursively for unconnected
+inputs in their nested connections tables. If an input is unconnected, the flow
+graph cannot be run and an error is raised.
 
-Next, every block referenced in the connections table is checked for
-unconnected inputs. If an input is unconnected, the flow graph cannot be run
-and an error is raised.
+The connections table is then used to build an auxiliary list called the
+"evaluation order". This is a list of the blocks in the flow graph arranged in
+a downstream, dependency-free order, starting with source blocks and ending
+with sink blocks. Each block in this list may depend on the outputs of previous
+blocks in the list, but does not depend on the outputs of any successive
+blocks. This order is needed to correctly differentiate the flow graph, because
+the output types of upstream blocks become the input types to downstream blocks
+for differentiation.
 
-The connections table data structure is then used to build an auxiliary list
-called the evaluation order. This is a list of all of the blocks in the flow
-graph, arranged in a downstream and dependency-free order. Each block in this
-list may depend on the outputs of previous blocks in the list, but does not
-depend on the outputs of any successive blocks. This order is needed to
-correctly differentiate the flow graph, because the output types of each block
-are fed as the input types to downstream blocks for differentiation.
+The evaluation order is visited to `differentiate()` each block. Hierarchical
+blocks are differentiated themselves, and then their nested flow graph is
+differentiated recursively in a similar manner -- by first building an
+evaluation order for their connections table, and then differentiating the
+internal blocks along it. If a block does not have a matching type signature
+for the input types at its ports, an error is raised. By the end of this
+process, every block has a type signature selected with well-defined input and
+output types.
 
-The evaluation order is followed once to `differentiate()` each block, once to
-check that all of its input port sample rates match, and once to `initialize()`
-each block. If input port sample rates do not match, the flow graph is not run
-and an error is raised.
+Next, the top-level block crawls its connections table recursively to absorb
+the internal connections of any hierarchical blocks. The result is a new
+connections table of all the underlying concrete blocks in the flow graph,
+without abstract hierarchical blocks. Each pair in this connections table is
+then visited to create `Pipe` objects that connect the `OutputPort` and
+`InputPort` of the concrete blocks in the flow graph.
 
-Finally, all of the `Pipe` objects in the flow graph are initialized. Pipes are
-backed by anonymous UNIX socket pairs created by `socketpair()`.
+Now that all of the concrete blocks have been connected with `Pipe` objects,
+each concrete block is checked for matching sample rates across its input
+ports. Sample rates are looked up recursively through the `Pipe` objects, and
+originate with the `get_rate()` implementation in source blocks. If the input
+port sample rates do not match for a block, an error is raised.
+
+At this stage, all blocks have been differentiated and have a known sample
+rate, so `initialize()` is called on each block in the flow graph, including
+hierarchical blocks, to carry out any block-specific initialization before
+running.
+
+Finally, all of the `Pipe` objects that connect the `OutputPort` and
+`InputPort` of the blocks in the flow graph are initialized. Each `Pipe`
+creates an anonymous UNIX socket pair and pre-allocates a read buffer.
 
 The flow graph is now ready to run.
 
-Code reference: [CompositeBlock class](../radio/core/composite.lua).
+Code reference: [CompositeBlock class](../radio/core/composite.lua), [Pipe
+class](../radio/core/pipe.lua).
 
 ##### Running
 
