docs: add note about luajit 2.1.0-beta3 bug to installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -72,6 +72,15 @@ Install LuaJIT 2.0.4 or greater and prerequisites:
 * Ubuntu/Debian/Rasbpian: `sudo apt-get install luajit libluajit-5.1-dev pkg-config`
 * Fedora/CentOS: `sudo yum install luajit luajit-devel`
 
+Note: LuaJIT 2.1.0-beta3, the version provided in recent Debian-based
+distributions, including Ubuntu and Raspbian, has a bug with embedded bytecode
+loading on 32-bit platforms that prevents the LuaRadio shared library module
+from loading correctly. This includes Raspberry Pis running a 32-bit OS. Use
+LuaJIT version 2.0.5, or a newer 2.1.0 beta, to run LuaRadio from the shared
+library module. Alternatively, install LuaRadio as a Lua module as [described
+above](#installing-luaradio-as-a-lua-module-option-1), or run LuaRadio
+[directly from the repository](../README.md#quickstart).
+
 ### Installation
 
 Build and install LuaRadio as a single shared library:
