docs: improve formatting in installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -10,11 +10,11 @@ repository](../README.md#quickstart), provided LuaJIT is installed.
 
 ## Packages
 
-### Arch Linux AUR
+#### Arch Linux AUR
 
 LuaRadio is available in the AUR: [`luaradio`](https://aur.archlinux.org/packages/luaradio)
 
-### macOS Homebrew
+#### macOS Homebrew
 
 LuaRadio is available in [Homebrew](http://brew.sh/):
 
@@ -22,7 +22,7 @@ LuaRadio is available in [Homebrew](http://brew.sh/):
 brew install luaradio
 ```
 
-### macOS MacPorts
+#### macOS MacPorts
 
 LuaRadio is available in [MacPorts](https://www.macports.org/):
 
@@ -53,12 +53,12 @@ make lib
 sudo make install
 ```
 
-### Real-time Dependencies
+## Real-time Dependencies
 
 LuaRadio has no hard dependencies outside of LuaJIT, but is accelerated by the
 optional libraries [liquid-dsp](https://github.com/jgaeddert/liquid-dsp),
-[VOLK](http://libvolk.org/), and [fftw](http://www.fftw.org/). For best
-real-time performance, install these libraries:
+[VOLK](http://libvolk.org/), and [fftw](http://www.fftw.org/). **For best
+real-time performance,** install these libraries:
 
 * Arch Linux: `sudo pacman -S liquid-dsp libvolk fftw`
 * macOS (Homebrew): `brew install liquid-dsp fftw`
@@ -66,14 +66,14 @@ real-time performance, install these libraries:
 * Ubuntu/Debian/Raspbian: `sudo apt-get install libliquid-dev libvolk1-dev libfftw3-dev`
 * Fedora/CentOS: `sudo yum install liquid-dsp fftw`
 
-### Optional Dependencies
+## Optional Dependencies
 
 Desktop users should also install the `gnuplot` package for plotting support.
 
 Some I/O blocks, like SDR and audio sources/sinks, may require external
 libraries. For example, the RTL-SDR requires the `librtlsdr` library.
 
-### Check Installation
+## Check Installation
 
 Check the installation by dumping the platform information:
 
