docs: improve wording about shared library in embedding guide

--- a/docs/4.embedding-luaradio.md
+++ b/docs/4.embedding-luaradio.md
@@ -1,6 +1,6 @@
 # Embedding LuaRadio
 
-This document describes how to embed LuaRadio into applications, and how
+This document describes how to embed LuaRadio into host applications, and how
 applications can source or sink samples with LuaRadio flow graphs.
 
 ## Table of Contents
@@ -18,16 +18,17 @@ applications can source or sink samples with LuaRadio flow graphs.
 ## Introduction
 
 LuaRadio can be run directly from its Lua file sources, but when it is
-installed, it is packaged into one dual-purpose binary library called
-`libluaradio`.
+installed as a shared library, it is packaged into one dual-purpose shared
+library called `libluaradio`.
 
-This library can both be loaded as the `radio` package by the LuaJIT
-interpreter for scripts, and linked into C/C++ applications to be run via its C
-API.  The packaged library contains the entire LuaRadio framework, bytecode
-compiled, as well as a small C API for creating LuaRadio contexts, loading
-scripts with a top-level flow graph, and controlling the top-level flow graph.
+This library can both be loaded as the `radio` module by LuaJIT for use in
+LuaRadio scripts, as well as linked into C/C++ applications to embed the
+LuaRadio engine. The packaged library contains the entire LuaRadio framework,
+bytecode compiled, as well as a small C API for creating LuaRadio contexts,
+loading scripts with a top-level flow graph, and controlling the top-level flow
+graph.
 
-A LuaRadio packaged library installation provides the following:
+A LuaRadio packaged shared library installation provides the following:
 
 * `/usr/bin/luaradio` — LuaRadio runner helper script
 * `/usr/lib/libluaradio.so` — Shared library for dynamic linking
