docs: add lua module source install option to installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -30,7 +30,32 @@ LuaRadio is available in [MacPorts](https://www.macports.org/):
 sudo port install luaradio
 ```
 
-## Building from Source
+## Installing LuaRadio as a Lua module (option 1)
+
+The Lua module version of LuaRadio is installed in its original Lua source
+form, along with the `luaradio` runner executable.
+
+### Prerequisites
+
+Install LuaJIT 2.0.4 or greater and prerequisites:
+
+* Arch Linux: `sudo pacman -S luajit`
+* macOS (Homebrew): `brew install luajit pkg-config`
+* macOS (MacPorts): `sudo port install luajit pkg-config`
+* Ubuntu/Debian/Rasbpian: `sudo apt-get install luajit pkg-config`
+* Fedora/CentOS: `sudo yum install luajit`
+
+### Installation
+
+Install LuaRadio as a Lua module:
+
+```
+git clone https://github.com/vsergeev/luaradio.git
+cd luaradio/embed
+sudo make install-lmod
+```
+
+## Installing LuaRadio as a shared library (option 2)
 
 The shared library version of LuaRadio is installed as a single shared library,
 along with the `luaradio` runner executable. The shared library also exposes
@@ -49,7 +74,7 @@ Install LuaJIT 2.0.4 or greater and prerequisites:
 
 ### Installation
 
-Build and install LuaRadio:
+Build and install LuaRadio as a single shared library:
 
 ```
 git clone https://github.com/vsergeev/luaradio.git
