docs: add shared library description to installation guide

--- a/docs/1.installation.md
+++ b/docs/1.installation.md
@@ -32,6 +32,11 @@ sudo port install luaradio
 
 ## Building from Source
 
+The shared library version of LuaRadio is installed as a single shared library,
+along with the `luaradio` runner executable. The shared library also exposes
+the LuaRadio C API, which can be used to [embed](4.embedding-luaradio.md)
+LuaRadio into host applications.
+
 ### Prerequisites
 
 Install LuaJIT 2.0.4 or greater and prerequisites:
