website: regenerate reference manual for v0.8.0

--- a/website/_includes/0.reference-manual.md
+++ b/website/_includes/0.reference-manual.md
@@ -1,6 +1,6 @@
 # LuaRadio Reference Manual
 
-Generated from LuaRadio `v0.7.0`.
+Generated from LuaRadio `v0.8.0`.
 
 ## Table of contents
 
@@ -62,6 +62,7 @@ Generated from LuaRadio `v0.7.0`.
         * [HighpassFilterBlock](#highpassfilterblock)
         * [IIRFilterBlock](#iirfilterblock)
         * [LowpassFilterBlock](#lowpassfilterblock)
+        * [ManchesterMatchedFilterBlock](#manchestermatchedfilterblock)
         * [RootRaisedCosineFilterBlock](#rootraisedcosinefilterblock)
         * [SinglepoleHighpassFilterBlock](#singlepolehighpassfilterblock)
         * [SinglepoleLowpassFilterBlock](#singlepolelowpassfilterblock)
@@ -96,6 +97,7 @@ Generated from LuaRadio `v0.7.0`.
         * [BinaryPhaseCorrectorBlock](#binaryphasecorrectorblock)
         * [DifferentialDecoderBlock](#differentialdecoderblock)
         * [ManchesterDecoderBlock](#manchesterdecoderblock)
+        * [PreambleSamplerBlock](#preamblesamplerblock)
         * [SamplerBlock](#samplerblock)
         * [SlicerBlock](#slicerblock)
     * [Type Conversion](#type-conversion)
@@ -111,6 +113,7 @@ Generated from LuaRadio `v0.7.0`.
         * [NopBlock](#nopblock)
         * [ThrottleBlock](#throttleblock)
     * [Modulation](#modulation)
+        * [FrequencyModulatorBlock](#frequencymodulatorblock)
         * [SSBModulator](#ssbmodulator)
     * [Demodulation](#demodulation)
         * [AMEnvelopeDemodulator](#amenvelopedemodulator)
@@ -123,6 +126,8 @@ Generated from LuaRadio `v0.7.0`.
     * [Protocol](#protocol)
         * [AX25FramerBlock](#ax25framerblock)
         * [AX25FramerBlock.AX25FrameType](#ax25framerblockax25frametype)
+        * [IDMFramerBlock](#idmframerblock)
+        * [IDMFramerBlock.IDMFrameType](#idmframerblockidmframetype)
         * [POCSAGDecoderBlock](#pocsagdecoderblock)
         * [POCSAGDecoderBlock.POCSAGMessageType](#pocsagdecoderblockpocsagmessagetype)
         * [POCSAGFramerBlock](#pocsagframerblock)
@@ -131,10 +136,15 @@ Generated from LuaRadio `v0.7.0`.
         * [RDSDecoderBlock.RDSPacketType](#rdsdecoderblockrdspackettype)
         * [RDSFramerBlock](#rdsframerblock)
         * [RDSFramerBlock.RDSFrameType](#rdsframerblockrdsframetype)
+        * [SCMFramerBlock](#scmframerblock)
+        * [SCMFramerBlock.SCMFrameType](#scmframerblockscmframetype)
+        * [SCMPlusFramerBlock](#scmplusframerblock)
+        * [SCMPlusFramerBlock.SCMPlusFrameType](#scmplusframerblockscmplusframetype)
         * [VaricodeDecoderBlock](#varicodedecoderblock)
     * [Receivers](#receivers)
         * [AX25Receiver](#ax25receiver)
         * [BPSK31Receiver](#bpsk31receiver)
+        * [ERTReceiver](#ertreceiver)
         * [POCSAGReceiver](#pocsagreceiver)
         * [RDSReceiver](#rdsreceiver)
 * [Infrastructure](#infrastructure)
@@ -2324,6 +2334,39 @@ local lpf = radio.LowpassFilterBlock(128, 18e3)
 --------------------------------------------------------------------------------
 
 <div class="block">
+#### ManchesterMatchedFilterBlock
+
+Correlate a real valued signal with a matched filter of a 1 to 0 pulse
+transition. The resulting signal will have positive peaks at 1 to 0
+transitions and negative peaks at 0 to 1 transitions, representing
+Manchester coded one and zero data bits, respectively.
+
+$$ y[n] = (x * h_{mf})[n] $$
+
+$$ h_{-mf}[n] = \begin{cases} +1 & 0 \le n \lt T \\ -1 & T \le n \lt 2T \end{cases} $$
+
+##### `radio.ManchesterMatchedFilterBlock(baudrate[, invert=false])`
+
+###### Arguments
+
+* `baudrate` (*number*): Baudrate of coded symbols in Hz
+* `invert` (*bool*): Invert matched filter
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *Float32*
+
+###### Example
+
+``` lua
+-- Manchester coded matched filter with 32768 baudrate
+local matched_filter = radio.ManchesterMatchedFilterBlock(32768)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
 #### RootRaisedCosineFilterBlock
 
 Filter a complex or real valued signal with an FIR approximation of a root
@@ -3193,6 +3236,43 @@ local manchester_decoder = radio.ManchesterDecoderBlock()
 --------------------------------------------------------------------------------
 
 <div class="block">
+#### PreambleSamplerBlock
+
+Sample a real valued signal into a fixed number of samples, by detecting a
+preamble bit sequence at the specified baudrate. The sampling position is
+optimized by maximizing the energy of the detected preamble.
+
+This block assumes a zero threshold when slicing samples into bits for
+comparison to the preamble.
+
+$$ y[n] = \text{PreambleSampler}(x[m], \text{baudrate}, \text{preamble}, \text{num_samples}) $$
+
+##### `radio.PreambleSamplerBlock(baudrate, preamble, num_samples)`
+
+###### Arguments
+
+* `baudrate` (*number*): Baudrate in symbols per second
+* `preamble` (*Vector*): Preamble Bit vector
+* `num_samples` (*number*): Number of samples per frame, including preamble
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *Float32*
+
+###### Example
+
+``` lua
+-- Sample a 16384 baudrate data signal with the 16-bit preamble 0x16a3 into 128 samples
+local preamble = radio.types.Bit.vector_from_array({0,0,0,1,0,1,1,0,1,0,1,0,0,0,1,1})
+local sampler = radio.PreambleSamplerBlock(16384, preamble, 128)
+local slicer = radio.SlicerBlock()
+top:connect(src, sampler, slicer)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
 #### SamplerBlock
 
 Sample a complex or real valued data signal on positive zero-crossing
@@ -3509,6 +3589,34 @@ top:connect(src, throttle, snk)
 ### Modulation
 
 <div class="block">
+#### FrequencyModulatorBlock
+
+Frequency modulate a real-valued signal into a baseband complex-valued
+signal.
+
+$$ y[n] = e^{j 2 \pi k \sum x[n]} $$
+
+##### `radio.FrequencyModulatorBlock(modulation_index)`
+
+###### Arguments
+
+* `modulation_index` (*number*): Modulation index (Carrier Deviation / Maximum Modulation Frequency)
+
+###### Type Signatures
+
+* `in` *Float32* ➔❑➔ `out` *ComplexFloat32*
+
+###### Example
+
+``` lua
+-- Frequency modulator with modulation index 0.2
+local fm_mod = radio.FrequencyModulatorBlock(0.2)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
 #### SSBModulator
 
 Modulate a real-valued signal into a baseband, single-sideband amplitude
@@ -3797,6 +3905,71 @@ AX.25 frame type, a Lua object with properties:
 --------------------------------------------------------------------------------
 
 <div class="block">
+#### IDMFramerBlock
+
+Validate and extract IDM frames from a bit stream.
+
+##### `radio.IDMFramerBlock()`
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *IDMFrameType*
+
+###### Example
+
+``` lua
+local framer = radio.IDMFramerBlock()
+```
+
+
+<div class="class">
+#### IDMFramerBlock.IDMFrameType
+
+##### `radio.IDMFramerBlock.IDMFrameType(type, application_version, ert_type, ert_id, consumption_interval_count, module_programming_state, tamper_count, async_count, power_outage_flags, last_consumption_count, differential_consumption_intervals, transmit_time_offset, serial_crc, packet_crc)`
+
+IDM frame type, a Lua object with properties:
+
+``` text
+{
+  type = "idm",
+  application_version = <8-bit integer>,
+  ert_type = <8-bit integer>,
+  ert_id = <32-bit integer>,
+  consumption_interval_count = <8-bit integer>,
+  module_programming_state = <8-bit integer>,
+  tamper_count = <6-byte string>,
+  async_count = <2-byte string>,
+  power_outage_flags = <6-byte string>,
+  last_consumption_count = <32-bit integer>,
+  differential_consumption_intervals = <53-byte string>,
+  transmit_time_offset = <16-bit integer>,
+  serial_crc = <16-bit integer>,
+  packet_crc = <16-bit integer>,
+}
+```
+
+###### Arguments
+
+* `type` (*string*): Protocol type, constant "idm"
+* `application_version` (*int*): Application version field, 8-bits wide
+* `ert_type` (*int*): ERT Type field, 8-bits wide
+* `ert_id` (*int*): ERT ID field, 32-bits wide
+* `consumption_interval_count` (*int*): Consumption interval count field, 8-bits wide
+* `module_programming_state` (*int*): Module programming state field, 8-bits wide
+* `tamper_count` (*string*): Tamper count bytes, 6 bytes long
+* `async_count` (*string*): Async count bytes, 2 bytes long
+* `power_outage_flags` (*string*): Power outage bytes, 6 bytes long
+* `last_consumption_count` (*int*): Last consumption count field, 32-bits wide
+* `differential_consumption_intervals` (*string*): Differential consumption intevals string, 53 bytes long
+* `transmit_time_offset` (*int*): Transmit time offset field, 16-bits wide
+* `serial_crc` (*int*): Serial CRC field, 16-bits wide
+* `packet_crc` (*int*): Packet CRC field, 16-bits wide
+
+</div>
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
 #### POCSAGDecoderBlock
 
 Decode POCSAG frames into POCSAG messages. This block decodes alphanumeric
@@ -4029,6 +4202,110 @@ typedef struct {
 --------------------------------------------------------------------------------
 
 <div class="block">
+#### SCMFramerBlock
+
+Validate and extract SCM frames from a bit stream.
+
+##### `radio.SCMFramerBlock()`
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *SCMFrameType*
+
+###### Example
+
+``` lua
+local framer = radio.SCMFramerBlock()
+```
+
+
+<div class="class">
+#### SCMFramerBlock.SCMFrameType
+
+##### `radio.SCMFramerBlock.SCMFrameType(type, ert_type, ert_id, consumption, physical_tamper, encoder_tamper, reserved, crc)`
+
+SCM frame type, a Lua object with properties:
+
+``` text
+{
+  type = "scm",
+  ert_type = <4-bit integer>,
+  ert_id = <26-bit integer>,
+  consumption = <24-bit integer>,
+  physical_tamper = <2-bit integer>,
+  encoder_tamper = <2-bit integer>,
+  reserved = <1-bit integer>,
+  crc = <16-bit integer>,
+}
+```
+
+###### Arguments
+
+* `type` (*string*): Protocol type, constant "scm"
+* `ert_type` (*int*): ERT Type field, 4-bits wide
+* `ert_id` (*int*): ERT ID Field, 26-bits wide
+* `consumption` (*int*): Consumption field, 24-bits wide
+* `physical_tamper` (*int*): Physcal tamper field, 2-bits wide
+* `encoder_tamper` (*int*): Encoder tamper field, 2-bits wide
+* `reserved` (*int*): Reserved field, 1-bit wide
+* `crc` (*int*): CRC field, 16-bits wide
+
+</div>
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### SCMPlusFramerBlock
+
+Validate and extract SCM+ frames from a bit stream.
+
+##### `radio.SCMPlusFramerBlock()`
+
+###### Type Signatures
+
+* `in` *Bit* ➔❑➔ `out` *SCMPlusFrameType*
+
+###### Example
+
+``` lua
+local framer = radio.SCMPlusFramerBlock()
+```
+
+
+<div class="class">
+#### SCMPlusFramerBlock.SCMPlusFrameType
+
+##### `radio.SCMPlusFramerBlock.SCMPlusFrameType(type, protocol_id, ert_type, ert_id, consumption, tamper, crc)`
+
+SCM+ frame type, a Lua object with properties:
+
+``` text
+{
+  type = "scm+",
+  protocol_id = <8-bit integer>,
+  ert_type = <8-bit integer>,
+  ert_id = <32-bit integer>,
+  consumption = <32-bit integer>,
+  tamper = <16-bit integer>,
+  crc = <16-bit integer>,
+}
+```
+
+###### Arguments
+
+* `type` (*string*): Protocol type, constant "scm+"
+* `protocol_id` (*int*): Protocol ID field, 8-bits wide
+* `ert_type` (*int*): ERT Type field, 8-bits wide
+* `ert_id` (*int*): ERT ID field, 32-bits wide
+* `consumption` (*int*): Consumption field, 32-bits wide
+* `tamper` (*int*): Tamper field, 16-bits wide
+* `crc` (*int*): CRC field, 16-bits wide
+
+</div>
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
 #### VaricodeDecoderBlock
 
 Decode a Varicode encoded bit stream into bytes.
@@ -4092,6 +4369,44 @@ signal.
 local receiver = radio.BPSK31Receiver()
 local snk = radio.RawFileSink(io.stdout)
 top:connect(src, receiver, snk)
+```
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="block">
+#### ERTReceiver
+
+Demodulate and decode ERT frames from an OOK modulated complex-valued
+signal. IDM, SCM, SCM+ protocols are supported.
+
+This receiver is based on rtlamr's excellent description:
+<https://github.com/bemasher/rtlamr/wiki/Signal-Processing>
+
+##### `radio.ERTReceiver([protocols={'idm','scm','scm+'}, options={}])`
+
+###### Arguments
+
+* `protocols` (*array*): Protocols to decode,
+                                                   choice of 'idm', 'scm',
+                                                   'scm+'. Default is all
+                                                   three.
+* `options` (*table*): Additional options, specifying:
+    * `decimation` Downsampling factor (int, default 6)
+
+###### Type Signatures
+
+* `in` *ComplexFloat32* ➔❑➔ `out1` *IDMFrameType*, `out2` *SCMFrameType*, `...`
+
+###### Example
+
+``` lua
+local receiver = radio.ERTReceiver({'scm', 'scm+'})
+local scm_sink = radio.PrintSink()
+local scm_plus_sink = radio.PrintSink()
+top:connect(src, receiver)
+top:connect(receiver, 'out1', scm_sink, 'in')
+top:connect(receiver, 'out2', scm_plus_sink, 'in')
 ```
 
 </div>
@@ -4865,15 +5180,15 @@ print(radio.types.Bit.type_name) --> Bit
 
 </div>
 <div class="function">
-##### `Bit.tonumber(vec[, offset=0, length=0, order="msb"])`
+##### `Bit.tonumber(vec, length[, offset=0, order="msb"])`
 
 Convert a Bit vector to a number.
 
 ###### Arguments
 
 * `vec` (*Vector*): Bit vector
-* `offset` (*int*): Offset
-* `length` (*int*): Length
+* `offset` (*int*): Offset in bits
+* `length` (*int*): Length in bits
 * `order` (*string*): Bit order. Choice of "msb" or "lsb".
 
 ###### Returns
@@ -4888,6 +5203,53 @@ assert(radio.types.Bit.tonumber(vec) == 5)
 assert(radio.types.Bit.tonumber(vec, 0, 4, 'lsb') == 10)
 assert(radio.types.Bit.tonumber(vec, 2, 2, 'msb') == 1)
 assert(radio.types.Bit.tonumber(vec, 2, 2, 'lsb') == 2)
+```
+
+</div>
+<div class="function">
+##### `Bit.tobytes(vec, length[, offset=0])`
+
+Convert a Bit vector to a byte string. Assumes MSB bit order.
+
+###### Arguments
+
+* `vec` (*Vector*): Bit vector
+* `offset` (*int*): Offset in bits
+* `length` (*int*): Length in bits
+
+###### Returns
+
+* Extracted bytes (*string*)
+
+###### Example
+
+``` lua
+-- Convert bits starting at offset 16 to an 8-byte byte string
+local data = radio.types.Bit.tobytes(vec, 16, 10*8)
+```
+
+</div>
+<div class="function">
+##### `Bit.tostring(vec, length[, offset=0])`
+
+Format a Bit vector to a string. Assumes MSB bit order.
+
+###### Arguments
+
+* `vec` (*Vector*): Bit vector
+* `offset` (*int*): Offset in bits
+* `length` (*int*): Length in bits
+
+###### Returns
+
+* Formatted bit string (*string*)
+
+###### Example
+
+``` lua
+local vec = radio.types.Bit.vector_from_array({0, 1, 0, 1, 1, 1})
+print(radio.types.Bit.tostring(vec)) --> '010111'
+print(radio.types.Bit.tostring(vec, 1, 4)) --> '1011'
 ```
 
 </div>
@@ -5448,7 +5810,7 @@ self:add_type_signature(inputs, outputs)
 <div class="class">
 #### Output
 
-##### `radio.block.Output(name, data_type)`
+##### `radio.block.Output(name, data_type|str)`
 
 Block output port descriptor. This contains the name and data type of
 a block output port.
@@ -5456,7 +5818,7 @@ a block output port.
 ###### Arguments
 
 * `name` (*string*): Name
-* `data_type` (*type*): Data type, e.g. `radio.types.ComplexFloat32`
+* `data_type|str` (*type*): Data type, e.g. `radio.types.ComplexFloat32`, or "copy" to copy input data type
 
 ###### Example
 
@@ -5732,6 +6094,22 @@ Platform constants.
 ##### `radio.platform.alloc`
 
 *function*: Platform page-aligned allocator function.
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="field">
+##### `radio.platform.load`
+
+*function*: Platform FFI load library helper function.
+
+</div>
+--------------------------------------------------------------------------------
+
+<div class="field">
+##### `radio.platform.time_us`
+
+*function*: Platform timestamp function.
 
 </div>
 --------------------------------------------------------------------------------
